@@ -9,6 +9,7 @@
 * icons: removed lots of unused status icons (beevvy)
 * icons: fixed xmpp status icons in freedesktop notifications on GTK+-based platforms (beevvy)
 * sql_history: fixed chat history with anonymous contacts not being displayed (beevvy)
+* sms: fixed saving sent SMS'es in history (beevvy)
 
 +++ version 0.12.1
 * jabber: reconnect after waking up from suspend (Juzef)
